crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__formatter_ignore_unterminated.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun inFunction() {
  val before = 1
  // @formatter:off
  val kept   =   2  +  3
  val also   =   4
}

val after = 5

diagnostics:
(none)
