crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__formatter_ignore_unterminated_class_body.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class InClass {
  // @formatter:off
  val kept   =   6
  val also   =   7
}

diagnostics:
(none)
