crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__local_declarations.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.statements

fun localFactory(prefix: String): () -> String {
  data class Local(val value: String)
  val local = Local(prefix.trim())
  return { local.value }
}

diagnostics:
(none)
