crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__loops_and_labels.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.statements

fun firstMatch(rows: List<List<String>>, needle: String): String? {
  outer@ for (row in rows) {
    for (cell in row) {
      if (cell == needle) break@outer
    }
  }
  return null
}

diagnostics:
(none)
