crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__redundant_semicolon.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun redundantSemicolons() {
  val first = 1
  val second = 2
  consume(first)
  consume(second)
}

fun lambdaDeclarationSeparators() {
  consume {
    val first = 1
    val second = 2
    use(first, second)
  }
}

diagnostics:
(none)
