crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__simple_expression_statements.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.statements

fun compute(value: Int): Int {
  val doubled = value * 2
  println(doubled + 1)
  return doubled + 1
}

diagnostics:
(none)
