crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__try_catch_finally.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.statements

fun parseOrZero(text: String): Int {
  return try {
    text.trim().toInt()
  } catch (error: NumberFormatException) {
    0
  } finally {
    println("parsed")
  }
}

diagnostics:
(none)
