crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__statements__when_statement.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.statements

fun log(value: Any?) {
  when (value) {
    null -> println("null")
    is String -> println(value.length)
    else -> println(value)
  }
}

diagnostics:
(none)
